--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -36,6 +36,11 @@
             <artifactId>spring-security-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+          <groupId>com.fasterxml.jackson.dataformat</groupId>
+          <artifactId>jackson-dataformat-yaml</artifactId>
+          <version>2.17.0</version>
+      </dependency>      
     </dependencies>
 
     <build>
