--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -48,6 +48,9 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <configuration>
+                  <mainClass>com.example.crab.CrabApplication</mainClass>
+                </configuration>
             </plugin>
         </plugins>
     </build>
