--- a/compose.front.dev.yml
+++ b/compose.front.dev.yml
@@ -1,8 +1,8 @@
 services:
   frontend:
     container_name: crab-front
-    build: /frontend
+    build: frontend/
     environment:
       NODE_ENV: production
     ports:
-      - 3000:3000
+      - 3000:5173
