--- a/frontend/.prettierrc.json
+++ b/frontend/.prettierrc.json
@@ -1,4 +1,5 @@
 {
+  "plugins": ["@trivago/prettier-plugin-sort-imports"],
   "semi": true,
   "trailingComma": "all",
   "singleQuote": true,
@@ -6,5 +7,8 @@
   "bracketSameLine": false,
   "tabWidth": 2,
   "arrowParens": "always",
-  "endOfLine": "auto"
+  "endOfLine": "auto",
+  "importOrder": ["^[^(./|@)]", "^@", "^[(.|..)/]"],
+  "importOrderSeparation": true,
+  "importOrderSortSpecifiers": true
 }
