--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,21 +23,23 @@
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
+    "@trivago/prettier-plugin-sort-imports": "^4.3.0",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
     "eslint": "^8.57.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "final-form": "^4.20.10",
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
+    "react-final-form": "^6.5.9",
     "typescript": "^5.2.2",
-    "vite": "^5.2.7",
-    "final-form": "^4.20.10",
-    "react-final-form": "^6.5.9"
+    "vite": "^5.2.7"
   },
   "lint-staged": {
     "**/*.{ts,tsx}": [
