--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,9 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "format": "prettier . --write",
-    "preview": "vite preview",
-    "precommit": "lint-staged",
-    "postinstall": "husky install"
+    "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.11.4",
@@ -34,17 +32,9 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "final-form": "^4.20.10",
-    "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
     "prettier": "^3.2.5",
     "react-final-form": "^6.5.9",
     "typescript": "^5.2.2",
     "vite": "^5.2.7"
-  },
-  "lint-staged": {
-    "**/*.{ts,tsx}": [
-      "yarn lint",
-      "yarn format"
-    ]
   }
 }
