add db in application.properties

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 spring.application.name=crab
+
+spring.datasource.jdbc-url=jdbc:postgresql://dbpostgresql:5434/crab
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
