--- a/compose.yml
+++ b/compose.yml
@@ -4,6 +4,23 @@ services:
     build: backend/
     ports:
       - 8080:8080
+    environment:
+      DB_HOST: dbpostgresql
+      DB_PORT: 5432
+    depends_on:
+      - dbpostgresql
+
+  dbpostgresql:
+    container_name: 'dbpostgresql'
+    image: 'postgres'
+    ports:
+      - 5434:5432
+    environment:
+      - 'POSTGRES_PASSWORD=password'
+      - 'POSTGRES_USER=postgres'
+      - 'POSTGRES_DB=crab'
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
 
   frontend:
     container_name: crab-front
