--- a/compose.back.dev.yml
+++ b/compose.back.dev.yml
@@ -8,15 +8,28 @@ services:
       DB_HOST: dbpostgresql
       DB_PORT: 5432
     depends_on:
-      - dbpostgresql
+      dbpostgresql:
+        condition: service_healthy
+
   dbpostgresql:
-    container_name: 'dbpostgresql'
-    image: 'postgres'
+    container_name: dbpostgresql
+    image: postgres
     ports:
       - 5434:5432
     environment:
-      - 'POSTGRES_PASSWORD=password'
-      - 'POSTGRES_USER=postgres'
-      - 'POSTGRES_DB=crab'
+      POSTGRES_PASSWORD: password
+      POSTGRES_USER: postgres
+      POSTGRES_DB: crab
+    healthcheck:
+      test:
+        [
+          "CMD-SHELL",
+          "pg_isready -U postgres -d crab"
+        ]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 10s
+    restart: unless-stopped
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
