[back-31] add stand data migration

--- a/backend/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yml
@@ -2,3 +2,6 @@ databaseChangeLog:
   - include:
       file: v1.0.0/cumulative-changelog.yml
       relativeToChangelogFile: true
+  - include:
+      file: v1.0.1/cumulative-changelog.yml
+      relativeToChangelogFile: true
