--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,11 +17,11 @@
     "@mui/material": "^5.15.14",
     "@mui/styles": "^5.15.15",
     "@mui/x-data-grid": "^7.1.0",
+    "@reduxjs/toolkit": "^2.2.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.1",
-    "react-router-dom": "^6.22.3",
-    "redux": "^5.0.1"
+    "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
     "@trivago/prettier-plugin-sort-imports": "^4.3.0",
