--- a/backend/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yml
@@ -5,3 +5,6 @@ databaseChangeLog:
   - include:
       file: v1.0.1/cumulative-changelog.yml
       relativeToChangelogFile: true
+  - include:
+      file: v1.1.0/cumulative-changelog.yml
+      relativeToChangelogFile: true
