--- a/backend/src/main/resources/db/changelog/db.changelog-master.yml
+++ b/backend/src/main/resources/db/changelog/db.changelog-master.yml
@@ -8,3 +8,6 @@ databaseChangeLog:
   - include:
       file: v1.1.0/cumulative-changelog.yml
       relativeToChangelogFile: true
+  - include:
+      file: v1.2.0/cumulative-changelog.yml
+      relativeToChangelogFile: true
