--- a/backend/ansible/playbook/deployServices.yml
+++ b/backend/ansible/playbook/deployServices.yml
@@ -5,25 +5,21 @@
   vars:
     services: "{{ services }}"
   tasks:
+    - name: stop existing containers with the same name
+      command: sudo docker-compose -f "/home/crab-stand/services/{{ item.repo }}/docker-compose.yml" down
+      loop: "{{ services }}"
+      ignore_errors: yes
+
     - name: clone repositories
       ansible.builtin.git:
         repo: "https://github.com/{{ item.repoOwner + '/' + item.repo }}"
         version: "{{ item.branch }}"
-        dest: "/home/crab-stand/services/{{ item.repo + '-' + item.branch }}"
+        dest: "/home/crab-stand/services/{{ item.repo }}"
       loop: "{{ services }}"
 
     - name: run docker-compose
       community.docker.docker_compose_v2:
-        project_src: "/home/crab-stand/services/{{ item.repo + '-' + item.branch }}"
+        project_src: "/home/crab-stand/services/{{ item.repo }}"
+        project_name: "{{ item.repo }}"
         state: present 
       loop: "{{ services }}"
-
-#{
-#    "services": [
-#      {
-#        "repo": "string",
-#        "repoOwner": "string",
-#        "branch": "string"
-#      }
-#    ]
-#}
