change dockerfile, create nginx config

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,7 +1,12 @@
-FROM node:20
+FROM node:20 as build-stage
 WORKDIR /app
 COPY package.json ./
-RUN yarn 
+RUN yarn
 COPY . .
+RUN yarn build
+
+FROM nginx:alpine
+COPY --from=build-stage /app/dist /usr/share/nginx/html
+COPY nginx.conf /etc/nginx/nginx.conf
 EXPOSE 3000
-CMD ["yarn", "dev"]
+CMD ["nginx", "-g", "daemon off;"]
